allprojects {
    group = "com.angazo"
    version = "0.1.0"

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    tasks.named('test') {
        useJUnitPlatform()
        jvmArgs '--enable-native-access=ALL-UNNAMED'
    }

    tasks.withType(JavaCompile).configureEach {
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
    }
}
